--- a/day4.html
+++ b/day4.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>hi</title>
 </head>
 <body>
-    <a href="day3.html"target="_blank">Navigate to day3</a>
-    <br>
-    <a href="day4.html"target="_blank">Navigate to day4</a>
+    <h4>hi!</h4>
 </body>
 </html>
